--- a/angular.json
+++ b/angular.json
@@ -78,10 +78,7 @@
               "browserTarget": "shopping-tracking-list:build:development"
             }
           },
-          "defaultConfiguration": "development",
-          "options": {
-            "proxyConfig": "proxy.conf.json"
-          }
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
