--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "^14.0.2",
     "@ngrx/store-devtools": "^14.0.2",
     "dotenv": "^16.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
